--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -28,8 +28,9 @@
     position: relative;
     top: 5rem;
     left: 0;
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 80%;
+    margin: 0 auto;
     z-index: -1;
     
 
@@ -44,6 +45,6 @@
     letter-spacing: .1rem;
     font-weight: 200;
     font-family: 'Raleway';
-    color: black;
+    color: white;
 }
 }
