--- a/src/components/shop-item/shop-item.styles.scss
+++ b/src/components/shop-item/shop-item.styles.scss
@@ -7,7 +7,7 @@
         flex-direction: column;
         align-items: center;
         margin: 2rem;
-        border: 1px solid black;
+        border: 1px solid rgb(171, 141, 63);
         position: relative;
       
         .image {
