--- a/src/pages/home-page/home-page.styles.scss
+++ b/src/pages/home-page/home-page.styles.scss
@@ -1,55 +1,80 @@
-.home-page {
-    max-width: 100%;
+.homepage {
+    margin-top: 5rem;
+    width: 100vw;
+    background-color: black;
 
-    .image-gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    //justify-content: center;
-    max-width: 100vw;
-    padding: 5rem 0;
-    background: linear-gradient(to bottom, whitesmoke, rgb(171, 141, 63), whitesmoke);
-    
-    .image-gallery-image {
-        max-height:30rem;
-        margin: 15px auto;
-        border: 1px solid black;
-    }
-}
-
-.motivational-quote-big {
-    font-family: 'Libre Baskerville';
-    font-size: 2.5rem;
-    font-weight: 500;
-    text-align: center;
-    margin: 5rem 7.5rem;
-}
-
-.homepage-video {
-    position: relative;
-    width: 100%;
-    margin-bottom: 5rem;
-    margin: auto;
-    z-index: -2;
-    display: flex;
-    justify-content: center;
-
-    .home-page-video {
-        width: 66%;
-        object-fit: cover;
-        border: 1px solid black;
-    }
-}
-
-    .motivational-quote-small {
-        position: relative;
-        bottom: 5rem;
-        // left: .5rem;
+    .homepage-video {
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
         z-index: 1;
-        margin: auto;
-        width: 50%;
-        font-family: 'Libre Baskerville';
-        font-size: 1.5rem;
-        font-weight: 300;
-        color: rgba(194, 159, 72, 0.75);
+        border: 1px solid rgb(171, 141, 63);
+        
+        &__content {
+            width: 100%;
+            object-fit: cover;
+            max-width: 900px;
+            max-height: 500px;
+        }
+    }
+    
+    .homepage-heading {
+        font-family: 'Raleway';
+        font-size: 4rem;
+        font-weight: 100;
+        letter-spacing: .3rem;
+        text-align: center;
+        margin-top: 3rem;
+        color: white;
+        text-transform: uppercase;
+        margin-bottom: 0;
+        opacity: 0;
+        animation: moveTagline 1.5s .5s forwards;
+
+    }
+
+    .underline {
+        width: 20rem;
+        height: .15rem;
+        background-color: rgb(171, 141, 63);
+        margin: 0 auto;
+        border-radius: 10px;
+        opacity: 0;
+        animation: moveTagline 2.5s .5s forwards;
+    }
+    
+    .tagline {
+        // position: absolute;
+        // left: -100px;
+        font-size: 2rem;
+        text-align: center;
+        letter-spacing: .1rem;
+        font-weight: 200;
+        font-family: 'Raleway';
+        color: white;
+        opacity: 0;
+        animation: moveTagline 3.5s .3s forwards;
+    }
+    
+    .homepage-gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        max-width: 100vw;
+        padding: 5rem 0;
+        background-color: black;
+    
+        .gallery-image {
+            max-height:30rem;
+            margin: 15px auto;
+            border: 1px solid rgb(171, 141, 63);
+        }
+    }
+
+    @keyframes moveTagline {
+        100% { 
+            left: 0;
+            opacity: 1; 
+        }
     }
 }
