--- a/src/pages/home-page/home-page.styles.scss
+++ b/src/pages/home-page/home-page.styles.scss
@@ -9,13 +9,14 @@
         display: flex;
         justify-content: center;
         z-index: 1;
-        border: 1px solid rgb(171, 141, 63);
+        //border: 1px solid rgb(171, 141, 63);
         
         &__content {
             width: 100%;
             object-fit: cover;
             max-width: 900px;
             max-height: 500px;
+            border: 1px solid rgb(171, 141, 63);
         }
     }
     
@@ -25,7 +26,8 @@
         font-weight: 100;
         letter-spacing: .3rem;
         text-align: center;
-        margin-top: 3rem;
+        margin-top: 5rem;
+        padding-top: 2rem;
         color: white;
         text-transform: uppercase;
         margin-bottom: 0;
@@ -42,26 +44,28 @@
         border-radius: 10px;
         opacity: 0;
         animation: moveTagline 2.5s .5s forwards;
+        margin-bottom: 2rem;
     }
     
     .tagline {
         // position: absolute;
         // left: -100px;
-        font-size: 2rem;
+        font-size: 3rem;
         text-align: center;
         letter-spacing: .1rem;
         font-weight: 200;
         font-family: 'Raleway';
         color: white;
         opacity: 0;
-        animation: moveTagline 3.5s .3s forwards;
+        padding-top: 2rem;
+        animation: moveTagline 5s .3s forwards;
     }
     
     .homepage-gallery {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
         max-width: 100vw;
-        padding: 5rem 0;
+        padding: 3rem 0;
         background-color: black;
     
         .gallery-image {
